--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "": "file:",
+    "@fawmi/vue-google-maps": "^0.9.79",
     "@fortawesome/fontawesome-free": "^6.7.1",
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
@@ -19,6 +20,7 @@
     "font-awesome": "^4.7.0",
     "front-integradora": "file:",
     "sweetalert2": "^11.14.5",
+    "v-dropdown": "^3.0.0",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0"
   },
